--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -145,13 +145,13 @@
 											<classifier>${mac32}</classifier>
 											<type>nar</type>
 										</artifactItem> -->
-						 				<artifactItem>
+						 		<!-- <artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${mac64}</classifier>
 											<type>nar</type> 
-										</artifactItem>
+										</artifactItem> -->
 									<!-- 	<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
@@ -159,14 +159,14 @@
 											<classifier>${win32}</classifier>
 											<type>nar</type>
 										</artifactItem> -->
-										<artifactItem>
+									<!-- <artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${win64}</classifier>
 											<type>nar</type>
 										</artifactItem>
-
+								  -->
 									</artifactItems>
 								</configuration>
 							</execution>
